--- a/server/DockerFile
+++ b/server/DockerFile
@@ -2,7 +2,7 @@
 FROM node:18
 
 # Set working directory inside the container
-WORKDIR /app
+WORKDIR /usr/src/app
 
 # Copy package.json and package-lock.json to leverage Docker cache for dependencies
 COPY package*.json ./
