--- a/client/DockerFile
+++ b/client/DockerFile
@@ -2,7 +2,7 @@
 FROM node:18.18.0
 
 # Set working directory
-WORKDIR /app
+WORKDIR /usr/src/app
 
 # Copy package.json and package-lock.json
 COPY package*.json ./
@@ -12,9 +12,6 @@ RUN npm install
 
 # Copy app files
 COPY . .
-
-#Build the client
-RUN npm run build
 
 # Expose the Vite development server port
 EXPOSE 5173
