--- a/ast-rule-engine/server/package.json
+++ b/ast-rule-engine/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node --loader ts-node/esm index.ts",
-    "dev":"node --loader ts-node/esm index.ts",
+    "dev": "node --loader ts-node/esm index.ts",
     "build": "tsc"
   },
   "author": "",
@@ -17,6 +17,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "helmet": "^8.0.0",
+    "json-rules-engine": "^6.6.0",
     "mongoose": "^8.7.2",
     "tsconfig-paths": "^4.2.0",
     "winston": "^3.15.0"
