--- a/weather-monitoring-system/docker-compose.yml
+++ b/weather-monitoring-system/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   mongodb:
     image: mongo:latest
@@ -8,14 +9,17 @@ services:
       - mongo_data:/data/db
 
   weather_app:
-    build: .
+    build: 
+      context: .   # Specify the build context
+      dockerfile: Dockerfile  # Specify the Dockerfile name with a space
     depends_on:
       - mongodb
     container_name: weather_app
     volumes:
       - .:/app
     environment:
-      - MONGO_URI=mongodb://mongodb:27017/
+      MONGO_URI: mongodb://mongodb:27017
+      API_KEY: 5a0b4bffc5c9fe4225dbe6107d3a8eae 
     ports:
       - "8000:8000"
 
